--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
-    "@mui/lab": "^5.0.0-alpha.109",
-    "@mui/material": "^5.10.15",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.5",
+    "babel-preset-react-app": "^9.0.0",
     "bootstrap": "^5.2.0-beta1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
